ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 82.202.142.45
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calculator-service
                port:
                  number: 8080
metadata:
  name: skooner
  namespace: kube-system
spec:
  rules:
    - host: 82.202.142.45
      http:
        paths:
          - path: /
            backend:
              service:
                name: skooner
                port:
                  number: 80
            pathType: ImplementationSpecific
